[project]
name = "master-thesis-figures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "angusforrest", email = "personal@angusforrest.com" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
